fix for column display on smaller res

--- a/style.css
+++ b/style.css
@@ -671,9 +671,9 @@ input#importSaveText {
 .recipeHeadName, .recipeName {
     display: flex;
     align-items: center;
-    flex-grow: 2;
+    width: 100%;
     min-width: 200px;
-    max-width: 400px;
+    max-width: 300px;
     padding-left: 10px;
 }
 
@@ -710,7 +710,7 @@ input#importSaveText {
 
 .recipeHeadCost, .recipeHeadTime, .recipeHeadCount, .recipeHeadValue, .recipecostdiv, .recipeTime, .recipeCount, .recipeValue, .jobHeadWorker, .jobHeadName, .jobHeadTime, .jobHeadValue, .jobWorker, .jobName, .jobTime, .jobValue {
     padding: 0 10px;
-    flex-grow: 1;
+    width: 100%;
     min-width: 100px;
     max-width: 200px;
 }
